parser.output
   0  $accept : %entry% $end

   1  program : block DOT

   2  block : decl_list BEGIN stmts END

   3  decl_list :
   4            | decl decl_list

   5  decl : CONST const_decls
   6       | VAR var_decls
   7       | proc_decl
   8       | TYPE type_decls

   9  const_decls : const_decl
  10              | const_decl const_decls

  11  const_decl : IDENT EQUAL expr SEMI

  12  type_decls : type_decl
  13             | type_decl type_decls

  14  type_decl : IDENT EQUAL typexpr SEMI

  15  var_decls : var_decl
  16            | var_decl var_decls

  17  var_decl : ident_list COLON typexpr SEMI

  18  proc_decl : proc_heading SEMI block SEMI

  19  proc_heading : PROC name params return_type

  20  params : LPAR RPAR
  21         | LPAR formal_decls RPAR

  22  formal_decls : formal_decl
  23               | formal_decl SEMI formal_decls

  24  formal_decl : ident_list COLON typexpr
  25              | VAR ident_list COLON typexpr
  26              | proc_heading

  27  return_type :
  28              | COLON typexpr

  29  stmts : stmt_list

  30  stmt_list : stmt
  31            | stmt SEMI stmt_list

  32  stmt : line stmt1
  33       | IMPOSSIBLE

  34  line :

  35  stmt1 :
  36        | variable ASSIGN expr
  37        | name actuals
  38        | RETURN expr_opt
  39        | IF expr THEN stmts elses END
  40        | WHILE expr DO stmts END
  41        | REPEAT stmts UNTIL expr
  42        | for_clause stmts END
  43        | CASE expr OF arms else_part END

  44  elses :
  45        | ELSE stmts
  46        | ELSIF line expr THEN stmts elses

  47  for_clause : FOR name ASSIGN for_elems DO

  48  for_elems : for_elem
  49            | for_elem COMMA for_elems

  50  for_elem : expr TO expr
  51           | expr STEP expr UNTIL expr
  52           | expr WHILE expr
  53           | expr

  54  arms : arm
  55       | arm VBAR arms

  56  arm : expr COLON stmts

  57  else_part :
  58            | ELSE stmts

  59  ident_list : IDENT
  60             | IDENT COMMA ident_list

  61  expr_opt :
  62           | expr

  63  expr : simple
  64       | expr RELOP simple
  65       | expr EQUAL simple

  66  simple : term
  67         | simple ADDOP term
  68         | simple MINUS term

  69  term : factor
  70       | term MULOP factor

  71  factor : variable
  72         | NUMBER
  73         | STRING
  74         | CHAR
  75         | NIL
  76         | name actuals
  77         | NOT factor
  78         | MINUS factor
  79         | LPAR expr RPAR

  80  actuals : LPAR RPAR
  81          | LPAR expr_list RPAR

  82  expr_list : expr
  83            | expr COMMA expr_list

  84  variable : name
  85           | variable SUB expr BUS
  86           | variable DOT name
  87           | variable ARROW

  88  typexpr : name
  89          | ARRAY expr OF typexpr
  90          | RECORD fields END
  91          | POINTER TO typexpr

  92  fields : field_decl opt_semi
  93         | field_decl SEMI fields

  94  field_decl : ident_list COLON typexpr

  95  opt_semi : SEMI
  96           |

  97  name : IDENT

  98  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (98)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	program  goto 7
	block  goto 8
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decl : CONST . const_decls  (5)

	IDENT  shift 13
	.  error

	const_decls  goto 14
	const_decl  goto 15


state 4
	proc_heading : PROC . name params return_type  (19)

	IDENT  shift 16
	.  error

	name  goto 17


state 5
	decl : TYPE . type_decls  (8)

	IDENT  shift 18
	.  error

	type_decls  goto 19
	type_decl  goto 20


state 6
	decl : VAR . var_decls  (6)

	IDENT  shift 21
	.  error

	var_decls  goto 22
	var_decl  goto 23
	ident_list  goto 24


state 7
	%entry% : '\001' program .  (98)

	.  reduce 98


state 8
	program : block . DOT  (1)

	DOT  shift 25
	.  error


state 9
	block : decl_list . BEGIN stmts END  (2)

	BEGIN  shift 26
	.  error


state 10
	decl_list : decl . decl_list  (4)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	decl_list  goto 27
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 11
	decl : proc_decl .  (7)

	.  reduce 7


state 12
	proc_decl : proc_heading . SEMI block SEMI  (18)

	SEMI  shift 28
	.  error


state 13
	const_decl : IDENT . EQUAL expr SEMI  (11)

	EQUAL  shift 29
	.  error


state 14
	decl : CONST const_decls .  (5)

	.  reduce 5


state 15
	const_decls : const_decl .  (9)
	const_decls : const_decl . const_decls  (10)

	IDENT  shift 13
	BEGIN  reduce 9
	CONST  reduce 9
	PROC  reduce 9
	TYPE  reduce 9
	VAR  reduce 9

	const_decls  goto 30
	const_decl  goto 15


state 16
	name : IDENT .  (97)

	.  reduce 97


state 17
	proc_heading : PROC name . params return_type  (19)

	LPAR  shift 31
	.  error

	params  goto 32


state 18
	type_decl : IDENT . EQUAL typexpr SEMI  (14)

	EQUAL  shift 33
	.  error


state 19
	decl : TYPE type_decls .  (8)

	.  reduce 8


state 20
	type_decls : type_decl .  (12)
	type_decls : type_decl . type_decls  (13)

	IDENT  shift 18
	BEGIN  reduce 12
	CONST  reduce 12
	PROC  reduce 12
	TYPE  reduce 12
	VAR  reduce 12

	type_decls  goto 34
	type_decl  goto 20


state 21
	ident_list : IDENT .  (59)
	ident_list : IDENT . COMMA ident_list  (60)

	COMMA  shift 35
	COLON  reduce 59


state 22
	decl : VAR var_decls .  (6)

	.  reduce 6


state 23
	var_decls : var_decl .  (15)
	var_decls : var_decl . var_decls  (16)

	IDENT  shift 21
	BEGIN  reduce 15
	CONST  reduce 15
	PROC  reduce 15
	TYPE  reduce 15
	VAR  reduce 15

	var_decls  goto 36
	var_decl  goto 23
	ident_list  goto 24


state 24
	var_decl : ident_list . COLON typexpr SEMI  (17)

	COLON  shift 37
	.  error


state 25
	program : block DOT .  (1)

	.  reduce 1


state 26
	block : decl_list BEGIN . stmts END  (2)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	FOR  reduce 34
	CASE  reduce 34

	stmts  goto 39
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 27
	decl_list : decl decl_list .  (4)

	.  reduce 4


state 28
	proc_decl : proc_heading SEMI . block SEMI  (18)
	decl_list : .  (3)

	CONST  shift 3
	PROC  shift 4
	TYPE  shift 5
	VAR  shift 6
	BEGIN  reduce 3

	block  goto 43
	decl_list  goto 9
	decl  goto 10
	proc_decl  goto 11
	proc_heading  goto 12


state 29
	const_decl : IDENT EQUAL . expr SEMI  (11)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 51
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 30
	const_decls : const_decl const_decls .  (10)

	.  reduce 10


state 31
	params : LPAR . RPAR  (20)
	params : LPAR . formal_decls RPAR  (21)

	IDENT  shift 21
	RPAR  shift 57
	PROC  shift 4
	VAR  shift 58
	.  error

	ident_list  goto 59
	proc_heading  goto 60
	formal_decls  goto 61
	formal_decl  goto 62


state 32
	proc_heading : PROC name params . return_type  (19)
	return_type : .  (27)

	COLON  shift 63
	SEMI  reduce 27
	RPAR  reduce 27

	return_type  goto 64


state 33
	type_decl : IDENT EQUAL . typexpr SEMI  (14)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 68
	name  goto 69


state 34
	type_decls : type_decl type_decls .  (13)

	.  reduce 13


state 35
	ident_list : IDENT COMMA . ident_list  (60)

	IDENT  shift 21
	.  error

	ident_list  goto 70


state 36
	var_decls : var_decl var_decls .  (16)

	.  reduce 16


state 37
	var_decl : ident_list COLON . typexpr SEMI  (17)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 71
	name  goto 69


state 38
	stmt : IMPOSSIBLE .  (33)

	.  reduce 33


state 39
	block : decl_list BEGIN stmts . END  (2)

	END  shift 72
	.  error


state 40
	stmts : stmt_list .  (29)

	.  reduce 29


state 41
	stmt_list : stmt .  (30)
	stmt_list : stmt . SEMI stmt_list  (31)

	SEMI  shift 73
	VBAR  reduce 30
	ELSE  reduce 30
	END  reduce 30
	UNTIL  reduce 30
	ELSIF  reduce 30


state 42
	stmt : line . stmt1  (32)
	stmt1 : .  (35)

	IDENT  shift 16
	IF  shift 74
	RETURN  shift 75
	WHILE  shift 76
	REPEAT  shift 77
	FOR  shift 78
	CASE  shift 79
	SEMI  reduce 35
	VBAR  reduce 35
	ELSE  reduce 35
	END  reduce 35
	UNTIL  reduce 35
	ELSIF  reduce 35

	name  goto 80
	stmt1  goto 81
	variable  goto 82
	for_clause  goto 83


state 43
	proc_decl : proc_heading SEMI block . SEMI  (18)

	SEMI  shift 84
	.  error


state 44
	factor : NUMBER .  (72)

	.  reduce 72


state 45
	factor : CHAR .  (74)

	.  reduce 74


state 46
	factor : STRING .  (73)

	.  reduce 73


state 47
	factor : LPAR . expr RPAR  (79)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 85
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 48
	factor : MINUS . factor  (78)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 86


state 49
	factor : NOT . factor  (77)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 87


state 50
	factor : NIL .  (75)

	.  reduce 75


state 51
	const_decl : IDENT EQUAL expr . SEMI  (11)
	expr : expr . RELOP simple  (64)
	expr : expr . EQUAL simple  (65)

	RELOP  shift 88
	SEMI  shift 89
	EQUAL  shift 90
	.  error


state 52
	factor : name . actuals  (76)
	variable : name .  (84)

	LPAR  shift 91
	MULOP  reduce 84
	ADDOP  reduce 84
	RELOP  reduce 84
	SEMI  reduce 84
	DOT  reduce 84
	COLON  reduce 84
	RPAR  reduce 84
	COMMA  reduce 84
	SUB  reduce 84
	BUS  reduce 84
	EQUAL  reduce 84
	MINUS  reduce 84
	VBAR  reduce 84
	ARROW  reduce 84
	DO  reduce 84
	ELSE  reduce 84
	END  reduce 84
	OF  reduce 84
	THEN  reduce 84
	TO  reduce 84
	WHILE  reduce 84
	UNTIL  reduce 84
	ELSIF  reduce 84
	STEP  reduce 84

	actuals  goto 92


state 53
	factor : variable .  (71)
	variable : variable . SUB expr BUS  (85)
	variable : variable . DOT name  (86)
	variable : variable . ARROW  (87)

	DOT  shift 93
	SUB  shift 94
	ARROW  shift 95
	MULOP  reduce 71
	ADDOP  reduce 71
	RELOP  reduce 71
	SEMI  reduce 71
	COLON  reduce 71
	RPAR  reduce 71
	COMMA  reduce 71
	BUS  reduce 71
	EQUAL  reduce 71
	MINUS  reduce 71
	VBAR  reduce 71
	DO  reduce 71
	ELSE  reduce 71
	END  reduce 71
	OF  reduce 71
	THEN  reduce 71
	TO  reduce 71
	WHILE  reduce 71
	UNTIL  reduce 71
	ELSIF  reduce 71
	STEP  reduce 71


state 54
	expr : simple .  (63)
	simple : simple . ADDOP term  (67)
	simple : simple . MINUS term  (68)

	ADDOP  shift 96
	MINUS  shift 97
	RELOP  reduce 63
	SEMI  reduce 63
	COLON  reduce 63
	RPAR  reduce 63
	COMMA  reduce 63
	BUS  reduce 63
	EQUAL  reduce 63
	VBAR  reduce 63
	DO  reduce 63
	ELSE  reduce 63
	END  reduce 63
	OF  reduce 63
	THEN  reduce 63
	TO  reduce 63
	WHILE  reduce 63
	UNTIL  reduce 63
	ELSIF  reduce 63
	STEP  reduce 63


state 55
	simple : term .  (66)
	term : term . MULOP factor  (70)

	MULOP  shift 98
	ADDOP  reduce 66
	RELOP  reduce 66
	SEMI  reduce 66
	COLON  reduce 66
	RPAR  reduce 66
	COMMA  reduce 66
	BUS  reduce 66
	EQUAL  reduce 66
	MINUS  reduce 66
	VBAR  reduce 66
	DO  reduce 66
	ELSE  reduce 66
	END  reduce 66
	OF  reduce 66
	THEN  reduce 66
	TO  reduce 66
	WHILE  reduce 66
	UNTIL  reduce 66
	ELSIF  reduce 66
	STEP  reduce 66


state 56
	term : factor .  (69)

	.  reduce 69


state 57
	params : LPAR RPAR .  (20)

	.  reduce 20


state 58
	formal_decl : VAR . ident_list COLON typexpr  (25)

	IDENT  shift 21
	.  error

	ident_list  goto 99


state 59
	formal_decl : ident_list . COLON typexpr  (24)

	COLON  shift 100
	.  error


state 60
	formal_decl : proc_heading .  (26)

	.  reduce 26


state 61
	params : LPAR formal_decls . RPAR  (21)

	RPAR  shift 101
	.  error


state 62
	formal_decls : formal_decl .  (22)
	formal_decls : formal_decl . SEMI formal_decls  (23)

	SEMI  shift 102
	RPAR  reduce 22


state 63
	return_type : COLON . typexpr  (28)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 103
	name  goto 69


state 64
	proc_heading : PROC name params return_type .  (19)

	.  reduce 19


state 65
	typexpr : ARRAY . expr OF typexpr  (89)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 104
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 66
	typexpr : RECORD . fields END  (90)

	IDENT  shift 21
	.  error

	ident_list  goto 105
	fields  goto 106
	field_decl  goto 107


state 67
	typexpr : POINTER . TO typexpr  (91)

	TO  shift 108
	.  error


state 68
	type_decl : IDENT EQUAL typexpr . SEMI  (14)

	SEMI  shift 109
	.  error


state 69
	typexpr : name .  (88)

	.  reduce 88


state 70
	ident_list : IDENT COMMA ident_list .  (60)

	.  reduce 60


state 71
	var_decl : ident_list COLON typexpr . SEMI  (17)

	SEMI  shift 110
	.  error


state 72
	block : decl_list BEGIN stmts END .  (2)

	.  reduce 2


state 73
	stmt_list : stmt SEMI . stmt_list  (31)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	VBAR  reduce 34
	ELSE  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	ELSIF  reduce 34
	CASE  reduce 34

	stmt_list  goto 111
	stmt  goto 41
	line  goto 42


state 74
	stmt1 : IF . expr THEN stmts elses END  (39)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 112
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 75
	stmt1 : RETURN . expr_opt  (38)
	expr_opt : .  (61)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	SEMI  reduce 61
	VBAR  reduce 61
	ELSE  reduce 61
	END  reduce 61
	UNTIL  reduce 61
	ELSIF  reduce 61

	expr  goto 113
	name  goto 52
	variable  goto 53
	expr_opt  goto 114
	simple  goto 54
	term  goto 55
	factor  goto 56


state 76
	stmt1 : WHILE . expr DO stmts END  (40)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 115
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 77
	stmt1 : REPEAT . stmts UNTIL expr  (41)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	UNTIL  reduce 34
	FOR  reduce 34
	CASE  reduce 34

	stmts  goto 116
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 78
	for_clause : FOR . name ASSIGN for_elems DO  (47)

	IDENT  shift 16
	.  error

	name  goto 117


state 79
	stmt1 : CASE . expr OF arms else_part END  (43)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 118
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 80
	stmt1 : name . actuals  (37)
	variable : name .  (84)

	LPAR  shift 91
	DOT  reduce 84
	SUB  reduce 84
	ASSIGN  reduce 84
	ARROW  reduce 84

	actuals  goto 119


state 81
	stmt : line stmt1 .  (32)

	.  reduce 32


state 82
	stmt1 : variable . ASSIGN expr  (36)
	variable : variable . SUB expr BUS  (85)
	variable : variable . DOT name  (86)
	variable : variable . ARROW  (87)

	DOT  shift 93
	SUB  shift 94
	ASSIGN  shift 120
	ARROW  shift 95
	.  error


state 83
	stmt1 : for_clause . stmts END  (42)
	line : .  (34)

	IMPOSSIBLE  shift 38
	IDENT  reduce 34
	SEMI  reduce 34
	END  reduce 34
	IF  reduce 34
	RETURN  reduce 34
	WHILE  reduce 34
	REPEAT  reduce 34
	FOR  reduce 34
	CASE  reduce 34

	stmts  goto 121
	stmt_list  goto 40
	stmt  goto 41
	line  goto 42


state 84
	proc_decl : proc_heading SEMI block SEMI .  (18)

	.  reduce 18


state 85
	expr : expr . RELOP simple  (64)
	expr : expr . EQUAL simple  (65)
	factor : LPAR expr . RPAR  (79)

	RELOP  shift 88
	RPAR  shift 122
	EQUAL  shift 90
	.  error


state 86
	factor : MINUS factor .  (78)

	.  reduce 78


state 87
	factor : NOT factor .  (77)

	.  reduce 77


state 88
	expr : expr RELOP . simple  (64)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	simple  goto 123
	term  goto 55
	factor  goto 56


state 89
	const_decl : IDENT EQUAL expr SEMI .  (11)

	.  reduce 11


state 90
	expr : expr EQUAL . simple  (65)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	simple  goto 124
	term  goto 55
	factor  goto 56


state 91
	actuals : LPAR . RPAR  (80)
	actuals : LPAR . expr_list RPAR  (81)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	RPAR  shift 125
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 126
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56
	expr_list  goto 127


state 92
	factor : name actuals .  (76)

	.  reduce 76


state 93
	variable : variable DOT . name  (86)

	IDENT  shift 16
	.  error

	name  goto 128


state 94
	variable : variable SUB . expr BUS  (85)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	expr  goto 129
	name  goto 52
	variable  goto 53
	simple  goto 54
	term  goto 55
	factor  goto 56


state 95
	variable : variable ARROW .  (87)

	.  reduce 87


state 96
	simple : simple ADDOP . term  (67)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	term  goto 130
	factor  goto 56


state 97
	simple : simple MINUS . term  (68)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	term  goto 131
	factor  goto 56


state 98
	term : term MULOP . factor  (70)

	IDENT  shift 16
	NUMBER  shift 44
	CHAR  shift 45
	STRING  shift 46
	LPAR  shift 47
	MINUS  shift 48
	NOT  shift 49
	NIL  shift 50
	.  error

	name  goto 52
	variable  goto 53
	factor  goto 132


state 99
	formal_decl : VAR ident_list . COLON typexpr  (25)

	COLON  shift 133
	.  error


state 100
	formal_decl : ident_list COLON . typexpr  (24)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 134
	name  goto 69


state 101
	params : LPAR formal_decls RPAR .  (21)

	.  reduce 21


state 102
	formal_decls : formal_decl SEMI . formal_decls  (23)

	IDENT  shift 21
	PROC  shift 4
	VAR  shift 58
	.  error

	ident_list  goto 59
	proc_heading  goto 60
	formal_decls  goto 135
	formal_decl  goto 62


state 103
	return_type : COLON typexpr .  (28)

	.  reduce 28


state 104
	expr : expr . RELOP simple  (64)
	expr : expr . EQUAL simple  (65)
	typexpr : ARRAY expr . OF typexpr  (89)

	RELOP  shift 88
	EQUAL  shift 90
	OF  shift 136
	.  error


state 105
	field_decl : ident_list . COLON typexpr  (94)

	COLON  shift 137
	.  error


state 106
	typexpr : RECORD fields . END  (90)

	END  shift 138
	.  error


state 107
	fields : field_decl . opt_semi  (92)
	fields : field_decl . SEMI fields  (93)
	opt_semi : .  (96)

	SEMI  shift 139
	END  reduce 96

	opt_semi  goto 140


state 108
	typexpr : POINTER TO . typexpr  (91)

	IDENT  shift 16
	ARRAY  shift 65
	RECORD  shift 66
	POINTER  shift 67
	.  error

	typexpr  goto 141
	name  goto 69


state 109
	type_decl : IDENT EQUAL typexpr SEMI .  (14)

	.  reduce 14


state 110
	var_decl : ident_list COLON typexpr SEMI .  (17)

	.  reduce 17


state 111
	stmt_list : stmt SEMI stmt_list .  (31)

	.  reduce 31

